# arklet

./: .bandit  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  server.py  setup.cfg  tox.ini
.github/workflows/: lint_python.yml  tox.yml
ark/: admin.py  apps.py  arklet.http  forms.py  models.py  utils.py  views.py
ark/management/commands/: apikey.py  make_test_data.py  mintarks.py
ark/migrations/: 0001_initial.py  0002_allow_blank_ark_model_fields.py  0004_rename_commitment_ark_rights_ark_format_and_more.py
ark/templates/: info.html
arklet/: asgi.py  jinja2env.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  entrypoint.sh  env.docker.local  install-packages.sh
src/arklet/ark/: admin.py  apps.py  forms.py  models.py  views.py
src/arklet/ark/management/commands/: apikey.py  mintarks.py
src/arklet/ark/migrations/: 0002_allow_blank_ark_model_fields.py  0003_set_defaults_in_db.py  0004_apikey_apikey_unique_key_name_for_naan.py  0005_ark_created_at_ark_updated_at_and_more.py  0006_alter_ark_created_at_alter_ark_updated_at.py
src/arklet/ark_import/: __main__.py  sample_noid_output.txt
src/arklet/entrypoints/: asgi.py  settings.py  urls.py  wsgi.py
tests/ark/: views_tests.py
