[project]
name = "arklet"
version = "0.2.0"
description = "An unassuming ARK minter, binder, and resolver"
readme = "README.md"
authors = [
    {name = "Alex Dempsey", email = "avdempsey@archive.org"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
requires-python = ">=3.8"
dependencies = [
    "Django>=4.0.10",
    "django-environ"
]

[project.urls]
Repository = "https://github.com/internetarchive/arklet"

[project.optional-dependencies]
postgres = [
    "psycopg2-binary"
]
sentry = [
    "sentry-sdk"
]

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "pytest-django",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "arklet.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--reuse-db"
