[project]
name = "arklet"
version = "0.2.0"
description = "An unassuming ARK minter, binder, and resolver"
readme = "README.md"
authors = [
    {name = "Alex Dempsey", email = "avdempsey@archive.org"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2,<6.0",
]

[project.urls]
Repository = "https://github.com/internetarchive/arklet"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]"
]
sentry = [
    "sentry-sdk"
]

[dependency-groups]
dev = [
    "django-upgrade>=1.29.1",
    "pytest",
    "pytest-django",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "arklet.entrypoints.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--reuse-db"
